--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,10 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
-        "php-flasher/flasher-laravel": "^2.0"
+        "php-flasher/flasher": "^2.0",
+        "php-flasher/flasher-laravel": "^2.0",
+        "php-flasher/flasher-notyf": "^2.0",
+        "php-flasher/flasher-notyf-laravel": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
