--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "php-flasher/flasher": "^2.0",
         "php-flasher/flasher-laravel": "^2.0",
         "php-flasher/flasher-notyf": "^2.0",
-        "php-flasher/flasher-notyf-laravel": "^2.0"
+        "php-flasher/flasher-notyf-laravel": "^2.0",
+        "php-mqtt/client": "^2.1"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
