--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
+        "maatwebsite/excel": "^3.1",
         "php-flasher/flasher": "^2.0",
         "php-flasher/flasher-laravel": "^2.0",
         "php-flasher/flasher-notyf": "^2.0",
