--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
         "barryvdh/laravel-dompdf": "^3.0",
         "laravel/framework": "^11.9",
         "laravel/reverb": "^1.1",
-        "laravel/sanctum": "^4.0",
+        "laravel/sanctum": "*",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.5",
